# django-mysite-github

./: .gitignore  Dockerfile  devices.csv  docker-compose.yaml  pyproject.toml  requirements.txt
M_09_permissions/mysite/shopapp/: tests.py
estate/: requirements.txt
estate/app_news/: admin.py  models.py  urls.py  views.py
estate/app_news/migrations/: 0001_initial.py  0002_newsitem_description_newsitem_published_at.py
estate/app_rss/: feeds.py  urls.py
estate/estate/: settings.py  urls.py
estate/market/: admin.py  models.py  urls.py  views.py
estate/market/fixtures/: estate_type-fixture.json  room_count-fixture.json
estate/market/migrations/: 0001_initial.py  0002_estate_seller.py  0003_estate_estate_type_estate_room_count.py
estate/myauth/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
estate/myauth/migrations/: 0001_initial.py  0002_alter_profile_options_alter_profile_avatar_and_more.py
first_djangosite/: manage.py
first_djangosite/first_djangosite/: asgi.py  settings.py  urls.py  wsgi.py
mysite/: db.json  db.sqlite3  quieries.sql  requirements.txt  shopapp-fixtures.json
mysite/blogapp/: admin.py  forms.py  models.py  sitemap.py  urls.py  views.py
mysite/docker/nginx/: Dockerfile  (+2 more)
mysite/myapiapp/: serializers.py  views.py
mysite/myauth/: admin.py  models.py  tests.py  urls.py  views.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
(+76 files in other folders)
