[tool.poetry]
name = "python-django"
version = "0.1.0"
description = ""
authors = ["Dimon <dimon3182@k66.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.5"
django-debug-toolbar = "^4.2.0"
django-filter = "^23.2"
drf-spectacular = "^0.26.4"
gunicorn = "^21.2.0"
pillow = "^10.0.0"
sentry-sdk = "^1.29.2"
flake8-docstrings = "^1.7.0"
pyyaml = "^6.0.1"
docutils = "^0.20.1"
djangorestframework = "^3.14.0"
attrs = "^23.1.0"
setuptools = "^68.1.2"
wheel = "^0.41.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
